Insert silence into the mix ring if there is no audio (or audio cannot keep up) from the channels.

Addresses PR kern/34647.